@@ -10,6 +10,7 @@ changes in sbcl-1.3.14
     accurately.
   * enhancement: the "--noinform" command-line option inhibits output from
     save-lisp-and-die in addition to removing the startup banner.
+  * bug fix: PROCESS-KILL failed to return errno if the system call failed
 
 changes in sbcl-1.3.13 relative to sbcl-1.3.12:
   * enhancement: SET triggers package locks on undefined variables.
